Slight fixes, add section comments (readability)

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -109,23 +109,24 @@ nav {
 
 #about {
     padding: 0rem 2rem 2rem 2rem;
+    justify-content: center;
 }
 
 main {
-    padding: 2rem 2rem;
+    padding: 1rem 1rem;
     background-color: #ffffff;
 }
 
 .box-item {
     background-color: #F5F5F5;
-    border-radius: 4px;
+    border-radius: 5px;
     box-shadow: 0px 1px 5px grey;
-    padding: 0.25rem 1rem;
+    padding: 0.5rem 1rem;
 }
 
 #skills {
-    margin: 0rem 0rem -2.5rem 0rem;
-    transform: translateY(-4rem);
+    margin: 0rem 0rem -2rem 0rem;
+    transform: translateY(-3rem);
     justify-content: center;
 }
 
@@ -147,11 +148,11 @@ main {
 #projects {
     background-color: #e8daef;
     margin: 0rem -2rem;
-    padding-bottom: 1rem;
+    justify-content: center;
 }
 
 #projects-background {
-    padding: 1rem;
+    padding: 0rem 2rem 1.5rem 2rem;
 }
 
 .project {
@@ -167,6 +168,7 @@ main {
 
 #contact {
     font-size: 1.25rem;
+    justify-content: center;
 }
 
 input[type=text] {
